desktoparrange (0.41) unstable; urgency=medium

  * the daemon will start also when running on the session manager
  * wait 0.1 seconds for completion of consecutive window operations
  * WindowSetup:
    When setting up windows in separate subprocesses
    save a pid list of setup subprocesses,
    therefore this list is used to wait for their completion

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Sat, 03 Dec 2022 10:00:52 +0100

desktoparrange (0.40) unstable; urgency=medium

  * lock a window by his Id when desktoparrange is processing each window
  * setup windows in separate subprocesses, when allowed

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Tue, 29 Nov 2022 15:52:53 +0100

desktoparrange (0.39) unstable; urgency=medium

  * new desktoparrange option 'execute':
    - interactive command: execute
    Describes a temporary rule that must be executed
    on every window of this session
  * rules:
    - select/deselect name 'regexp'
    select windows by title checking the regular expression 'regexp'
  * rules, 'select desktop current':
    - special value 'current' to select/deselect windows by desktop number

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Fri, 18 Nov 2022 15:16:19 +0100

desktoparrange (0.38) unstable; urgency=medium

  * system configuration file /etc/desktoparrange/config.txt

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Fri, 18 Nov 2022 04:16:36 +0100

desktoparrange (0.37) unstable; urgency=medium

  * remove function _cut, because is not needed.
    previously introduced as a wrapper for the cut utility

 -- Jordi Pujol Palomer <jordipujolp@gmail.com>  Wed, 26 Oct 2022 06:31:10 +0200

desktoparrange (0.36) unstable; urgency=medium

  * lock files just before and after reading or writing.
  * the function _cut is a wrapper for the cut utility
    to accept any kind of space as separator.
  * interactive commands to arrange desktops:
    - interactive checking the command line